--- a/PretzelWatcher.vcxproj
+++ b/PretzelWatcher.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="singleton.h" />
+    <ClInclude Include="stringhelpers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
