--- a/PretzelWatcher.vcxproj.filters
+++ b/PretzelWatcher.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="logger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pretzelprocess.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="singleton.h">
@@ -30,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="logger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pretzelprocess.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
