main.cpp: lay out FileWatcher to filewatcher .cpp + .h

--- a/PretzelWatcher.vcxproj
+++ b/PretzelWatcher.vcxproj
@@ -135,11 +135,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="filewatcher.cpp" />
     <ClCompile Include="logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pretzelprocess.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="filewatcher.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="pretzelprocess.h" />
     <ClInclude Include="singleton.h" />
