--- a/PretzelWatcher.vcxproj.filters
+++ b/PretzelWatcher.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="pretzelprocess.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="filewatcher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="singleton.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pretzelprocess.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="filewatcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
